--- a/resources/assets/sass/vendor.scss
+++ b/resources/assets/sass/vendor.scss
@@ -1,5 +1,12 @@
-// @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+// Fonts
+@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
+
+// Variables
 @import "variables";
 
+// Utilities
 @import "utilities";
+
+// Bootstrap
+@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
