--- a/resources/assets/sass/vendor.scss
+++ b/resources/assets/sass/vendor.scss
@@ -9,4 +9,4 @@
 @import "utilities";
 
 // Bootstrap
-@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "~bootstrap-sass/assets/stylesheets/bootstrap";
