--- a/resources/assets/sass/vendor.scss
+++ b/resources/assets/sass/vendor.scss
@@ -6,7 +6,7 @@
 @import "variables";
 
 // Utilities
-@import "utilities";
+// @import "utilities";
 
 // Bootstrap
-@import "~bootstrap-sass/assets/stylesheets/bootstrap";
+@import "~bootstrap/scss/bootstrap";
